[gd_scene load_steps=6 format=3 uid="uid://brcwtlk1fn7b7"]

[ext_resource type="PackedScene" uid="uid://dqcm14c5mumdg" path="res://UI/Menu/basic_menu.tscn" id="1_jocvc"]
[ext_resource type="Script" path="res://UI/GameUI/game_params_menu.gd" id="2_24khn"]
[ext_resource type="PackedScene" uid="uid://dkmr2v1p6mjdq" path="res://UI/Menu/controls/menu_button.tscn" id="3_0l2da"]
[ext_resource type="PackedScene" uid="uid://bjm1tvhsv2q8e" path="res://UI/Menu/controls/input_label.tscn" id="4_bevsa"]
[ext_resource type="PackedScene" uid="uid://bhyhaf02ctar5" path="res://UI/Menu/controls/numeric_input.tscn" id="5_i00vy"]

[node name="GameParamsMenu" instance=ExtResource("1_jocvc")]
script = ExtResource("2_24khn")

[node name="Background" parent="." index="0"]
layout_mode = 3

[node name="Margin" parent="." index="1"]
layout_mode = 3

[node name="Title" parent="Margin/Contents" index="0"]
text = "Input params for the Game"

[node name="BackButton" parent="Margin/Contents/Interactive/VBoxContainer" index="0" instance=ExtResource("3_0l2da")]
layout_mode = 2
text = "Back"

[node name="GridContainer" type="GridContainer" parent="Margin/Contents/Interactive/VBoxContainer" index="1"]
layout_mode = 2
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 32
columns = 2

[node name="WidthLabel" parent="Margin/Contents/Interactive/VBoxContainer/GridContainer" index="0" instance=ExtResource("4_bevsa")]
layout_mode = 2
text = "Width"

[node name="WidthInput" parent="Margin/Contents/Interactive/VBoxContainer/GridContainer" index="1" instance=ExtResource("5_i00vy")]
layout_mode = 2
min_value = 3.0
value = 3.0

[node name="HeightLabel" parent="Margin/Contents/Interactive/VBoxContainer/GridContainer" index="2" instance=ExtResource("4_bevsa")]
layout_mode = 2
text = "Height"

[node name="HeightInput" parent="Margin/Contents/Interactive/VBoxContainer/GridContainer" index="3" instance=ExtResource("5_i00vy")]
layout_mode = 2
min_value = 3.0
value = 3.0

[node name="StartButton" parent="Margin/Contents/Interactive/VBoxContainer" index="2" instance=ExtResource("3_0l2da")]
layout_mode = 2
text = "Start"

[connection signal="pressed" from="Margin/Contents/Interactive/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Margin/Contents/Interactive/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
